@@ -17,20 +17,25 @@
 package com.badlogic.gdx.tests;
 
 import com.badlogic.gdx.Gdx;
+import com.badlogic.gdx.graphics.Color;
 import com.badlogic.gdx.graphics.GL20;
 import com.badlogic.gdx.graphics.Mesh;
 import com.badlogic.gdx.graphics.Texture;
 import com.badlogic.gdx.graphics.VertexAttribute;
+import com.badlogic.gdx.graphics.VertexAttributes.Usage;
 import com.badlogic.gdx.graphics.glutils.ShaderProgram;
 import com.badlogic.gdx.math.Matrix4;
 import com.badlogic.gdx.math.Vector3;
 import com.badlogic.gdx.tests.utils.GdxTest;
+import com.badlogic.gdx.utils.NumberUtils;
 
 public class MeshShaderTest extends GdxTest {
 	ShaderProgram shader;
-	Mesh mesh;
+	Mesh mesh, meshCustomVA;
 	Texture texture;
 	Matrix4 matrix = new Matrix4();
+	
+	private static final float FLOAT_WHITE = Color.WHITE.toFloatBits();
 
 	@Override
 	public void create () {
@@ -54,7 +59,24 @@ public class MeshShaderTest extends GdxTest {
 		mesh.setVertices(new float[] {-0.5f, -0.5f, 0, 1, 1, 1, 1, 0, 1, 0.5f, -0.5f, 0, 1, 1, 1, 1, 1, 1, 0.5f, 0.5f, 0, 1, 1, 1,
 			1, 1, 0, -0.5f, 0.5f, 0, 1, 1, 1, 1, 0, 0});
 		mesh.setIndices(new short[] {0, 1, 2, 2, 3, 0});
+		
+		//Mesh with texCoords wearing a pair of shorts. :)
+		meshCustomVA = new Mesh(true, 4, 6, VertexAttribute.Position(), VertexAttribute.ColorPacked(), 
+			new VertexAttribute(Usage.TextureCoordinates, 2, GL20.GL_UNSIGNED_SHORT, true, ShaderProgram.TEXCOORD_ATTRIBUTE + "0", 0));
+		meshCustomVA.setVertices(new float[] {
+			-0.5f, -0.5f, 0, FLOAT_WHITE, toSingleFloat(0, 1), 
+			0.5f, -0.5f, 0, FLOAT_WHITE, toSingleFloat(1, 1), 
+			0.5f, 0.5f, 0, FLOAT_WHITE, toSingleFloat(1, 0), 
+			-0.5f, 0.5f, 0, FLOAT_WHITE, toSingleFloat(0, 0)
+			});
+		meshCustomVA.setIndices(new short[] {0, 1, 2, 2, 3, 0});
+		
 		texture = new Texture(Gdx.files.internal("data/bobrgb888-32x32.png"));
+	}
+	
+	private static float toSingleFloat (float u, float v){
+		int vu = ((int)(v * 0xffff) << 16) | (int)(u * 0xffff);
+		return NumberUtils.intToFloatColor(vu); //v will lose some precision due to masking
 	}
 
 	Vector3 axis = new Vector3(0, 0, 1);
@@ -64,6 +86,8 @@ public class MeshShaderTest extends GdxTest {
 	public void render () {
 		angle += Gdx.graphics.getDeltaTime() * 45;
 		matrix.setToRotation(axis, angle);
+		
+		Mesh meshToDraw = Gdx.input.isButtonPressed(0) ? meshCustomVA : mesh;
 
 		Gdx.gl20.glViewport(0, 0, Gdx.graphics.getBackBufferWidth(), Gdx.graphics.getBackBufferHeight());
 		Gdx.gl20.glClearColor(0.2f, 0.2f, 0.2f, 1);
@@ -75,7 +99,7 @@ public class MeshShaderTest extends GdxTest {
 		shader.begin();
 		shader.setUniformMatrix("u_worldView", matrix);
 		shader.setUniformi("u_texture", 0);
-		mesh.render(shader, GL20.GL_TRIANGLES);
+		meshToDraw.render(shader, GL20.GL_TRIANGLES);
 		shader.end();
 	}
 
